# Websocket-online-clipboard

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  ws.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
