[package]
name = "online-clipboard"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
incremental = false
strip = true

[dependencies]
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version= "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
warp = "0.3.5"
